# agent

./: AGENTS.md  Cargo.toml  NEOVIM_FFI_PLAN.md  README.md  REFACTOR.md  TUI_ARCHITECTURE_PLAN.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/engine/: Cargo.toml
crates/engine/src/: agent.rs  compact.rs  config.rs  image.rs  lib.rs  log.rs  paths.rs  permissions.rs  plan.rs  pricing.rs  provider.rs  redact.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: event.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: alloc.rs  api.rs  app.rs  buffer.rs  builtin_commands.rs  completer.rs  config.rs  custom_commands.rs  format.rs  keymap.rs  lib.rs  lua.rs  metrics.rs  pane.rs  perf.rs  persist.rs  prompt_sections.rs  (+8 more)
docs/: zensical.toml
docs/docs/: benchmarks.md
docs/lua-examples/: README.md  block_summarizer.lua  leader.lua  override.lua  statusline.lua  yank_block.lua
docs/overrides/: home.html
examples/: spinners.rs
refactor/: README.md  REFACTOR.md  STATUS.md  TESTING.md  check.sh
src/: agent.rs  app.rs  completer.rs  config.rs  input.rs  instructions.rs  log.rs  main.rs  perf.rs  permissions.rs  provider.rs  render.rs  session.rs  setup.rs  state.rs  theme.rs  tools.rs  vim.rs
src/input/: mod.rs  settings.rs
src/prompts/: system.txt  system_apply.txt  system_plan.txt
src/render/: blocks.rs  dialogs.rs  highlight.rs  mod.rs
src/tools/: bash.rs  edit_file.rs  grep.rs  mod.rs  read_file.rs  web_cache.rs  web_fetch.rs  web_search.rs  web_shared.rs  write_file.rs
tests/: scenarios.rs
tests/common/: harness.rs
(+181 files in other folders)
