[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
glob = "0.3"
tokio-util = "0.7.18"
syntect = "5.3.0"
comfy-table = "7.2.2"
two-face = "0.5.1"
serde_yml = "0.0.12"
futures-util = "0.3.32"
similar = "2.7.0"
arboard = "3.6.1"
